--- a/demo-restaurant.html
+++ b/demo-restaurant.html
@@ -158,7 +158,7 @@
 							<div class="col-lg-3 bottommargin-sm">
 								<div class="feature-box media-box" style="max-width: 400px">
 									<div class="fbox-media" style="width: 70px; height: auto;">
-										<img src="demos/restaurant/images/icons/bowl.svg" alt="">
+										<img src="demos/restaurant/images/icons/bowl.svg" alt="" class="sr-icons">
 									</div>
 									<h3>Food Served Hot</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas omnis nam molestias minus ipsa, placeat!</p>
@@ -781,7 +781,7 @@
 				mouseDrag: false,
 				dotsContainer: '#item-thumb1',
 			});
-		});
+        });
 
 	</script>
 
