change images and logo

--- a/demo-restaurant.html
+++ b/demo-restaurant.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="SemiColonWeb" />
 
+	<link rel="shortcut icon" type="image/x-icon" href="images/logo/favicon.ico" />
+
 	<!-- Stylesheets
 	============================================= -->
 	<link href="https://fonts.googleapis.com/css?family=Cookie|Open+Sans:400,600,700,800,900|Poppins:300,400,500,600,700|Playfair+Display:400,400i,700,700i,900" rel="stylesheet">
@@ -33,11 +35,13 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Restaurant | Canvas</title>
+	<title>FriendZoneCafé</title>
 
 	<style>
 	/* Page Loader CSS */
-	.css3-spinner:before,.pizza .slice:after,.pizza .slice:before{content:''}.css3-spinner{height:100vh;-webkit-box-align:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;background:#FFF}.css3-spinner:before{position:absolute;top:50%;left:50%;-webkit-transform:translateX(-50%) translateY(-50%);transform:translateX(-50%) translateY(-50%);width:15vmin;height:2vmin;background:#DDD;margin-top:17.5vmin;-webkit-filter:blur(10px);filter:blur(10px);border-radius:100%}.pizza{height:20vmin;width:20vmin;-webkit-box-align:center;-ms-flex-align:center;align-items:center;background:0 0;position:relative;-webkit-animation:rotate 13s linear infinite;animation:rotate 13s linear infinite}@-webkit-keyframes rotate{to{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes rotate{to{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}.pizza .slice{z-index:-1;overflow:visible;position:absolute;width:0;height:0;border-style:solid;border-width:10vmin 2.75vmin 0;border-color:#ffdc73 transparent transparent;left:7.5vmin;top:0;-webkit-transform-origin:50% 100%;transform-origin:50% 100%;-webkit-transform:rotate(0);transform:rotate(0);-webkit-animation:loading 1.8125s ease-in-out infinite;animation:loading 1.8125s ease-in-out infinite}@-webkit-keyframes loading{0%,100%,49%{opacity:1}50%,99%{opacity:0}}@keyframes loading{0%,100%,49%{opacity:1}50%,99%{opacity:0}}.pizza .slice:nth-of-type(2n):after{box-shadow:.5vmin 2.5vmin 0 #cc333f}.pizza .slice:nth-of-type(4n):after{box-shadow:.5vmin 2.5vmin 0 #cc333f,1.5vmin 5vmin 0 #cc333f}.pizza .slice:nth-of-type(1){-webkit-transform:rotate(-27.75deg);transform:rotate(-27.75deg);-webkit-animation-delay:-62.5ms;animation-delay:-62.5ms}.pizza .slice:nth-of-type(2){-webkit-transform:rotate(-55.5deg);transform:rotate(-55.5deg);-webkit-animation-delay:-125ms;animation-delay:-125ms}.pizza .slice:nth-of-type(3){-webkit-transform:rotate(-83.25deg);transform:rotate(-83.25deg);-webkit-animation-delay:-.1875s;animation-delay:-.1875s}.pizza .slice:nth-of-type(4){-webkit-transform:rotate(-111deg);transform:rotate(-111deg);-webkit-animation-delay:-.25s;animation-delay:-.25s}.pizza .slice:nth-of-type(5){-webkit-transform:rotate(-138.75deg);transform:rotate(-138.75deg);-webkit-animation-delay:-.3125s;animation-delay:-.3125s}.pizza .slice:nth-of-type(6){-webkit-transform:rotate(-166.5deg);transform:rotate(-166.5deg);-webkit-animation-delay:-375ms;animation-delay:-375ms}.pizza .slice:nth-of-type(7){-webkit-transform:rotate(-194.25deg);transform:rotate(-194.25deg);-webkit-animation-delay:-.4375s;animation-delay:-.4375s}.pizza .slice:nth-of-type(8){-webkit-transform:rotate(-222deg);transform:rotate(-222deg);-webkit-animation-delay:-.5s;animation-delay:-.5s}.pizza .slice:nth-of-type(9){-webkit-transform:rotate(-249.75deg);transform:rotate(-249.75deg);-webkit-animation-delay:-.5625s;animation-delay:-.5625s}.pizza .slice:nth-of-type(10){-webkit-transform:rotate(-277.5deg);transform:rotate(-277.5deg);-webkit-animation-delay:-625ms;animation-delay:-625ms}.pizza .slice:nth-of-type(11){-webkit-transform:rotate(-305.25deg);transform:rotate(-305.25deg);-webkit-animation-delay:-.6875s;animation-delay:-.6875s}.pizza .slice:nth-of-type(12){-webkit-transform:rotate(-333deg);transform:rotate(-333deg);-webkit-animation-delay:-.75s;animation-delay:-.75s}.pizza .slice:before{position:absolute;height:1.5vmin;width:6vmin;background:#bbb083;top:-10.5vmin;left:-3vmin;border-radius:100vmin 100vmin .5vmin .5vmin/50vmin}.pizza .slice:after{border-radius:100%;position:absolute;width:1.25vmin;height:1.25vmin;background:#cc333f;left:-1vmin;top:-7vmin;z-index:2}
+	.css3-spinner:before,
+	.pizza .slice:after,
+	.pizza .slice:before{content:''}.css3-spinner{height:100vh;  -webkit-box-align:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;background:#FFF}.css3-spinner:before{position:absolute;top:50%;left:50%;-webkit-transform:translateX(-50%) translateY(-50%);transform:translateX(-50%) translateY(-50%);width:15vmin;height:2vmin;background:#DDD;margin-top:17.5vmin;-webkit-filter:blur(10px);filter:blur(10px);border-radius:100%}.pizza{height:20vmin;width:20vmin;-webkit-box-align:center;-ms-flex-align:center;align-items:center;background:0 0;position:relative;-webkit-animation:rotate 13s linear infinite;animation:rotate 13s linear infinite}@-webkit-keyframes rotate{to{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes rotate{to{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}.pizza .slice{z-index:-1;overflow:visible;position:absolute;width:0;height:0;border-style:solid;border-width:10vmin 2.75vmin 0;border-color:#ffdc73 transparent transparent;left:7.5vmin;top:0;-webkit-transform-origin:50% 100%;transform-origin:50% 100%;-webkit-transform:rotate(0);transform:rotate(0);-webkit-animation:loading 1.8125s ease-in-out infinite;animation:loading 1.8125s ease-in-out infinite}@-webkit-keyframes loading{0%,100%,49%{opacity:1}50%,99%{opacity:0}}@keyframes loading{0%,100%,49%{opacity:1}50%,99%{opacity:0}}.pizza .slice:nth-of-type(2n):after{box-shadow:.5vmin 2.5vmin 0 #cc333f}.pizza .slice:nth-of-type(4n):after{box-shadow:.5vmin 2.5vmin 0 #cc333f,1.5vmin 5vmin 0 #cc333f}.pizza .slice:nth-of-type(1){-webkit-transform:rotate(-27.75deg);transform:rotate(-27.75deg);-webkit-animation-delay:-62.5ms;animation-delay:-62.5ms}.pizza .slice:nth-of-type(2){-webkit-transform:rotate(-55.5deg);transform:rotate(-55.5deg);-webkit-animation-delay:-125ms;animation-delay:-125ms}.pizza .slice:nth-of-type(3){-webkit-transform:rotate(-83.25deg);transform:rotate(-83.25deg);-webkit-animation-delay:-.1875s;animation-delay:-.1875s}.pizza .slice:nth-of-type(4){-webkit-transform:rotate(-111deg);transform:rotate(-111deg);-webkit-animation-delay:-.25s;animation-delay:-.25s}.pizza .slice:nth-of-type(5){-webkit-transform:rotate(-138.75deg);transform:rotate(-138.75deg);-webkit-animation-delay:-.3125s;animation-delay:-.3125s}.pizza .slice:nth-of-type(6){-webkit-transform:rotate(-166.5deg);transform:rotate(-166.5deg);-webkit-animation-delay:-375ms;animation-delay:-375ms}.pizza .slice:nth-of-type(7){-webkit-transform:rotate(-194.25deg);transform:rotate(-194.25deg);-webkit-animation-delay:-.4375s;animation-delay:-.4375s}.pizza .slice:nth-of-type(8){-webkit-transform:rotate(-222deg);transform:rotate(-222deg);-webkit-animation-delay:-.5s;animation-delay:-.5s}.pizza .slice:nth-of-type(9){-webkit-transform:rotate(-249.75deg);transform:rotate(-249.75deg);-webkit-animation-delay:-.5625s;animation-delay:-.5625s}.pizza .slice:nth-of-type(10){-webkit-transform:rotate(-277.5deg);transform:rotate(-277.5deg);-webkit-animation-delay:-625ms;animation-delay:-625ms}.pizza .slice:nth-of-type(11){-webkit-transform:rotate(-305.25deg);transform:rotate(-305.25deg);-webkit-animation-delay:-.6875s;animation-delay:-.6875s}.pizza .slice:nth-of-type(12){-webkit-transform:rotate(-333deg);transform:rotate(-333deg);-webkit-animation-delay:-.75s;animation-delay:-.75s}.pizza .slice:before{position:absolute;height:1.5vmin;width:6vmin;background:#bbb083;top:-10.5vmin;left:-3vmin;border-radius:100vmin 100vmin .5vmin .5vmin/50vmin}.pizza .slice:after{border-radius:100%;position:absolute;width:1.25vmin;height:1.25vmin;background:#cc333f;left:-1vmin;top:-7vmin;z-index:2}
 	</style>
 
 </head>
@@ -61,8 +65,8 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="demo-restaurant.html" class="standard-logo"><img src="demos/restaurant/images/logo.png" alt="Canvas Logo"></a>
-						<a href="demo-restaurant.html" class="retina-logo"><img src="demos/restaurant/images/logo@2x.png" alt="Canvas Logo"></a>
+						<a href="demo-restaurant.html" class="standard-logo"><img src="images/logo/Png_Small.png" alt="FriendZoneCafe Logo"></a>
+						<!--<a href="demo-restaurant.html" class="retina-logo"><img src="demos/restaurant/images/logo@2x.png" alt="FriendZoneCafe Logo"></a>-->
 					</div><!-- #logo end -->
 
 					<!-- Primary Navigation
@@ -70,15 +74,15 @@
 					<nav id="primary-menu" class="with-arrows clearfix">
 
 						<ul>
-							<li><a href="#"><div>Home</div></a></li>
-							<li><a href="#"><div>About</div></a></li>
+							<li><a href="#"><div>Inicio</div></a></li>
+							<li><a href="#"><div>Acerca de</div></a></li>
 							<li><a href="#"><div>Menu</div></a></li>
 						</ul>
 
 						<ul>
-							<li><a href="#"><div>Gallery</div></a></li>
-							<li><a href="#"><div>Blog</div></a></li>
-							<li><a href="#" class="color"><div>Reservation</div></a></li>
+							<li><a href="#"><div>Galeria</div></a></li>
+							<!--<li><a href="#"><div>Blog</div></a></li>
+							<li><a href="#" class="color"><div>Reservation</div></a></li>-->
 						</ul>
 
 					</nav><!-- #primary-menu end -->
@@ -147,15 +151,15 @@
 
 			<div class="content-wrap">
 
-				<div class="section nomargin clearfix" style="padding: 40px 0; background: url('demos/restaurant/images/sections/4.jpg') center center no-repeat; background-size: 100% auto">
+				<div class="section nomargin clearfix" style="padding: 40px 0; background: url('images/restaurant/background1.jpg') center center no-repeat; background-size: 100% auto">
 					<div class="container clearfix">
 
-						<div class="heading-block nobottomborder bottommargin-sm">
+						<div class="heading-block nobottomborder bottommargin-sm text-right">
 							<h2 class="font-secondary color nott" style="font-size: 52px;">How We Work</h2>
 						</div>
 
 						<div class="row clearfix">
-							<div class="col-lg-3 bottommargin-sm">
+							<div class="col-lg-3 offset-3 bottommargin-sm">
 								<div class="feature-box media-box" style="max-width: 400px">
 									<div class="fbox-media" style="width: 70px; height: auto;">
 										<img src="demos/restaurant/images/icons/bowl.svg" alt="" class="sr-icons">
@@ -191,7 +195,7 @@
 
 				<div class="clear"></div>
 
-				<div class="section nobottommargin" style="background: #FFF url('demos/restaurant/images/sections/5.jpg') no-repeat top left / cover; padding: 60px 0; border-top: 1px solid #EEE;">
+				<div class="section nobottommargin" style="background: #FFF url('demos/restaurant/images/sections/') no-repeat top left / cover; padding: 60px 0; border-top: 1px solid #EEE;">
 					<div class="container clearfix">
 						<div class="heading-block center nobottommargin nobottomborder">
 							<span class="font-primary" style="font-size: 16px; color: #888">Tasty &amp; Healthy</span>
@@ -329,7 +333,7 @@
 				<div id="portfolio" class="portfolio portfolio-parallax clearfix">
 
 					<article class="portfolio-item pf-media pf-icons">
-						<div class="portfolio-image" style="background-image: url('images/restaurant/grano_cafe.jpg');" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;"><div class="portfolio-overlay"></div></div>
+						<div class="portfolio-image" style="background-image: url('images/restaurant/grano_cafe.jpg'); background-repeat: no-repeat;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;"><div class="portfolio-overlay"></div></div>
 						<div class="portfolio-desc">
 							<h3><a href="portfolio-single.html">Open Imagination</a></h3>
 							<span><a href="#">Media</a>, <a href="#">Icons</a></span>
@@ -340,7 +344,7 @@
 
 				<div class="clear"></div>
 
-				<div class="section nobottommargin" style="background: #fee749 url('demos/restaurant/images/sections/4.jpg') no-repeat center right; background-size: cover; padding: 60px 0;">
+				<div class="section nobottommargin" style="background: white; url('demos/restaurant/images/sections/') no-repeat center right; background-size: cover; padding: 60px 0;">
 					<div class="heading-block center nobottommargin nobottomborder">
 						<span class="font-primary ls1" style="font-size: 14px; color: #AAA">Sweet &amp; Sexy</span>
 						<h3 class="nott font-secondary ls0" style="font-size: 60px;line-height: 1.3;">Our Dessert Menu</h3>
